# dj4e-rzed

./: README.md  pyproject.toml
http/: builtin_http_client.py  builtin_http_server.py  cfgs.py
